debug.txt
modules/planning/tasks/optimizers/open_space_trajectory_generation/open_space_trajectory_provider.cc:868:28: error: cannot convert 'const std::vector<const swift::planning::Obstacle*, std::allocator<const swift::planning::Obstacle*> >' to 'const std::vector<swift::planning::Obstacle>&'
  868 |           frame_->obstacles(),
      |           ~~~~~~~~~~~~~~~~~^~
      |                            |
      |                            const std::vector<const swift::planning::Obstacle*, std::allocator<const swift::planning::Obstacle*> >
